# AoC23

./: CMakeLists.txt  README.md  lib.c  lib.h  main.c  main.h
Day01/: day_01.c  day_01.h
Day02/: day_02.c  day_02.h
Day03/: day_03.c  day_03.h
Day04/: day_04.c  day_04.h
Day05/: day_05.c  day_05.h
Day06/: day_06.c  day_06.h
Day07/: day_07.c  day_07.h
Day08/: day_08.c  day_08.h
Day09/: day_09.c  day_09.h
Day10/: day_10.c  day_10.h
Day11/: day_11.c  day_11.h
Day12/: day_12.c  day_12.h
Day13/: day_13.c  day_13.h
Day14/: day_14.c  day_14.h
Day15/: day_15.c  day_15.h
Day16/: day_16.c  day_16.h
Day17/: day_17.c  day_17.h
Day18/: day_18.c  day_18.h
Day19/: day_19.c  day_19.h
Day20/: day_20.c  day_20.h
Helper/: main.py
